# todoist-rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: cache.rs  error.rs  lib.rs  tests.rs
src/command/: filter.rs  item.rs  label.rs  macros.rs  mod.rs  note.rs  project.rs
src/models/: filter.rs  item.rs  label.rs  mod.rs  note.rs  notification.rs  project.rs  section.rs  user.rs
src/resource/: filter.rs  item.rs  label.rs  mod.rs  note.rs  notification.rs  project.rs  section.rs  user.rs
src/types/: color.rs  date.rs  error.rs  intbool.rs  mod.rs
test/data/: due_date.json
test/data/resources/: filter.json  item.json  label.json  note.json  project.json  project_note.json  reminder.json  section.json  user.json
