[package]
name = "todoist"
version = "0.1.0"
authors = ["Ian Shehadeh <IanShehadeh2020@gmail.com>"]
license = "Apache-2.0 AND MIT"
homepage = "https://github.com/IanS5/todoist-rs"
repository = "https://github.com/IanS5/todoist-rs"
description = "Rust wrapper around the todoist sync API"
readme = "README.md"

[dependencies]
reqwest = "0.11"
uuid = {version = "0.6", features = ["v4", "serde"] }
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.16"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "2.31.2", optional = true }
xdg = { version = "^2.1", optional = true }

[[bin]]
name = "todoist"
path = "src/bin/main.rs"
required-features = ["binaries"]

[features]
binaries = ["clap", "xdg"]